For a documentation of all features, see http://semantic-mediawiki.org

== SMW 1.5.? ==

* A new datatype "Telephone number" has been introduced for validating phone
  numbers based on RFC 3966. Only global phone numbers are accepted, and no
  vanity numbers (those containing letters) are allowed. Use Type:String if
  you want to store more general strings as telephone numbers.
* Support for additional parameters for ?printouts in inline queries, specified
  by |+parameter=value after the printout. Currently supported are
  *  limit: set the maximum number of values for this printout
  *	 order: order values ascending or descending
  *  align: right/center/left alignment for printouts in tables
  *  index: directly address one value of a multi-valued (n-ary) property
* Support for inverse properties: use "-" in front of property names anywhere to
  refer to the inverse direction of a property. Works in browsing interfaces,
  queries, and query output directives. In queries only for properties of Type:Page.
* Compatibility to new MediaWiki skin "vector"
* Removed support for backwards compatibility to SMW <1.0 ($smwgSMWBetaCompatible).

== SMW 1.4.3 ==

See http://semantic-mediawiki.org/wiki/SMW_1.4.3

* A new query format, 'category', that displays values in the style of a
  MediaWiki category page
* A new 'columns' parameter for the 'ol' and 'ul' formats
* The 'csv' format now prints a header row by default
* The "::~" comparator in queries can now also be used for properties of type
  Geographical coordinate, to find points within a certain distance
* Using "-" as an output format for query printouts, or leaving the formatting
  string empty now leads to printout values being returned as plain, unformatted
  values. Recall that the general format for printouts in #ask is as follows:
   ?propertyname # format = label
* New special property "Has improper value for" can be used to track input errors